--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "http": "0.0.1-security",
+    "ini": "^2.0.0",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.7",
     "swagger-jsdoc": "^6.0.1",
